tests/snapshots/snapshots__interpreter@block_ifelse.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/block_ifelse.pr
---
3
2
1
3
2
4
=> ()
