tests/snapshots/snapshots__interpreter@block_match.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/block_match.pr
---
0
0
7
3
21
=> ()
