tests/snapshots/snapshots__interpreter@block_stmts.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/block_stmts.pr
---
100
2
4
6
8
21
=> ()
