tests/snapshots/snapshots__interpreter@borrow.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/borrow.pr
---
4
40
10
=> ()
