tests/snapshots/snapshots__interpreter@cancel_await.pr.snap
---
source: tests/snapshots.rs
expression: out
input_file: tests/cases/run/cancel_await.pr
---
await observed Cancelled
-1
=> ()
