tests/snapshots/snapshots__interpreter@cancel_completed.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/cancel_completed.pr
---
quick: done
awaited 7
cancel of completed fiber was a no-op
7
=> ()
